# filesoup

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
frontend/: .gitignore  .postcssrc  .proxyrc  bsconfig.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.res  App.tsx  Button.res  Button.tsx  CopyToClipboard.res  CopyToClipboard.tsx  FileInput.res  FileInput.tsx  Footer.tsx  Header.tsx  Leech.res  Leech.tsx  Panel.res  ProgressBar.res  ProgressBar.tsx  Seed.res  Seed.tsx  ShareLink.tsx  Spinner.res  Spinner.tsx  Toast.tsx  WebTorrent.res  XHR.res  analytics.ts  index.css  index.html  main.res  types.d.ts
frontend/src/hooks/: useWebTorrent.tsx
src/: id.rs  main.rs  static_files.rs
