[package]
name = "filesoup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", features = [
	"json",
] }
serde = { version = "1", features = ["derive"] }
rust-embed = { version = "6.3.0", features = ["compression"] }
rand = "0.8.5"
