[package]
name = "filesoup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
rust-embed = { version = "6.4.0", features = ["compression"] }
rand = "0.8.5"
